# ML-Flow-Docker-.py-useing-advaned-house-price-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  mlflow.db  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/pages/: 1_Predict.py  2_Model_Info.py
configs/: config.yaml  model.yaml  paths.yaml  schema.yaml
src/house_price/: main.py
src/house_price/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/house_price/config/: configuration.py
src/house_price/entity/: config_entity.py
src/house_price/pipeline/: prediction_pipeline.py  stage_01_data_pipeline.py  stage_02_data_transformation.py  training_pipeline.py
src/house_price/utils/: common.py
